--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "event-registration",
   "version": "1.0.0",
+  "description": "Event registration backend server",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
